Avoid layout shift due to undeclared image sizes

--- a/docs/_sass/jekyll-theme-minimal.scss
+++ b/docs/_sass/jekyll-theme-minimal.scss
@@ -135,6 +135,11 @@ header ul, header p {
   margin:0 0 40px;
 }
 
+.fit-width {
+  width:100%;
+  height:auto;
+}
+
 ul.downloads {
   list-style:none;
   height:46px;
